--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {
 <div class="row">
   <div class="side">
       <h3>Ken Javier Castillo</h3>
-      <div class="img" style="height:300px;"><img src = "Ken.jpg" alt = "Avatar" style= "width: 200px;"></div>
+      <div class="img" style="height:300px;"><img src = "ken.jpg" alt = "Avatar" style= "width: 200px;"></div>
   </div>
   <div class="main">
       <h2>About Me!</h2>
