--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@ body {
 </style>
 </head>
 <body>
-
+<div class="navbar">
+<a href="resume.php">Home</a>
+  <a href="contact.php">Contact Information</a>
+  <a href="portfolio.php">Portfolio</a>
+  <a href="question.php">Questionare</a>
+</div>
 
 
 <div class="header">
