--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ body {
 <body>
 <div class="navbar">
 <a href="resume.php">Home</a>
-  <a href="contact.php">Contact Information</a>
-  <a href="portfolio.php">Portfolio</a>
-  <a href="question.php">Questionare</a>
+  <a href="contact.php"><button>Contact Information</button></a>
+  <a href="portfolio.php"><button>Portfolio</button></a>
+  <a href="question.php"><button>Questionare</button></a>
 </div>
 
 
