--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ body {
 </head>
 <body>
 <div class="navbar">
-<a href="resume.php">Home</a>
-  <a href="contact.php"><button>Contact Information</button></a>
-  <a href="portfolio.php"><button>Portfolio</button></a>
-  <a href="question.php"><button>Questionare</button></a>
+<a href="resume.html">Home</a>
+  <a href="contact.html"><button>Contact Information</button></a>
+  <a href="portfolio.html"><button>Portfolio</button></a>
+  <a href="question.html"><button>Questionare</button></a>
 </div>
 
 
