--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ body {
 <body>
 <div class="navbar">
 <a href="resume.html">Home</a>
-  <a href="contact.html"><button>Contact Information</button></a>
-  <a href="portfolio.html"><button>Portfolio</button></a>
-  <a href="question.html"><button>Questionare</button></a>
+  <a href="contact.html">Contact Information</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="question.html">Questionare</a>
 </div>
 
 
